# octopus2adls

./: .env copy.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
functions/: octopus2adls_shared-0.1.0-py3-none-any.whl  requirements.txt
functions/scheduler/: __init__.py  function.json
infra/: README.md  main.bicep  main.json  parameters.dev.json  parameters.example.json  parameters.prod.json
infra/modules/: diagnostics.bicep  function.bicep  functionapp.bicep  functionstorage.bicep  insights.bicep  keyvault.bicep  roleAssignments.bicep  storage.bicep
scripts/: backfill_octopus.py  backfill_tado_unified.py  deploy.sh  deploy_func.sh  inspect_parquet.py  setup_tado_auth.py
src/: setup.py
src/adlsclient/: __init__.py  config.py  state.py  writer.py
src/octopus2adls/: __init__.py  client.py  config.py  enrich.py  storage.py
src/octopusclient/: __init__.py  client.py  config.py  enrich.py  storage.py
src/tadoclient/: __init__.py  client.py  config.py  state.py
src/weatherclient/: __init__.py  client.py  config.py
tests/: test_client_pagination.py  test_enrich.py  test_ingestion_boundaries.py  test_paths.py  test_rate_join.py  test_state.py
