[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octopus2adls"
version = "0.1.0"
description = "Octopus Energy -> ADLS ingestion Azure Function"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "azure-functions~=1.18",
  "azure-identity>=1.15.0",
  "azure-storage-blob>=12.20.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "requests-mock", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
